# monty-rust-python-bind-port-template

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .env  Cargo.toml  Dockerfile  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  requirements-tests.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
src/: lib.rs
{{project}}/: __init__.py
