[package]
name = "{{project}}"
description = "{{description}}"
license = "{{license}}"
license-file = "LICENSE"
version = "{{version}}"
edition = "2018"

[lib]
name = "{{project}}"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.16"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.16"
