[package]
name = "{{project}}"
description = "{{description}}"
license = "{{spdx_license_identifier}}"
version = "{{version}}"
edition = "2021"

[lib]
name = "{{project}}"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.16"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.16"
