[package]
name = "{{project}}"
description = "{{description}}"
license = "{{spdx_license_identifier}}"
version = "{{version}}"
rust-version = "{{min_version_of['rust']}}"
edition = "2021"

[lib]
name = "{{project}}"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.20"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.20"
